# Soroban-Lock-Core

./: Cargo.toml  README.md
.github/workflows/: ci.yml  security.yml
docs/: checks.md
test-contracts/address-cmp-instead-of-auth-safe/: Cargo.toml
test-contracts/address-cmp-instead-of-auth-vulnerable/: Cargo.toml
test-contracts/admin-eq-instead-of-auth-safe/: Cargo.toml
test-contracts/admin-eq-instead-of-auth-vulnerable/: Cargo.toml
test-contracts/admin-no-remove-safe/: Cargo.toml
test-contracts/admin-no-remove-vulnerable/: Cargo.toml
test-contracts/admin-stored-unused-safe/: Cargo.toml
test-contracts/admin-stored-unused-vulnerable/: Cargo.toml
test-contracts/auth-temp-storage-safe/: Cargo.toml
test-contracts/auth-temp-storage-vulnerable/: Cargo.toml
test-contracts/authorize-empty-safe/: Cargo.toml
test-contracts/authorize-empty-vulnerable/: Cargo.toml
test-contracts/bump-after-read-safe/: Cargo.toml
test-contracts/bump-after-read-vulnerable/: Cargo.toml
test-contracts/burn_no_event-safe/: Cargo.toml
test-contracts/burn_no_event-vulnerable/: Cargo.toml
test-contracts/catch_unwind-safe/: Cargo.toml
test-contracts/catch_unwind-vulnerable/: Cargo.toml
test-contracts/dead_storage_code-safe/: Cargo.toml
test-contracts/dead_storage_code-vulnerable/: Cargo.toml
test-contracts/deploy-arg-auth-safe/: Cargo.toml
test-contracts/deploy-arg-auth-vulnerable/: Cargo.toml
test-contracts/deployer_reuse-safe/: Cargo.toml
test-contracts/deployer_reuse-vulnerable/: Cargo.toml
test-contracts/ed25519_key_in_temp-safe/: Cargo.toml
test-contracts/ed25519_key_in_temp-vulnerable/: Cargo.toml
test-contracts/expect_leaks-safe/: Cargo.toml
test-contracts/expect_leaks-vulnerable/: Cargo.toml
test-contracts/hardcoded_passphrase-safe/: Cargo.toml
test-contracts/hardcoded_passphrase-vulnerable/: Cargo.toml
test-contracts/hash-in-loop-safe/: Cargo.toml
test-contracts/init_no_event-safe/: Cargo.toml
test-contracts/init_no_event-safe/src/: lib.rs
test-contracts/init_no_event-vulnerable/: Cargo.toml
test-contracts/init_no_event-vulnerable/src/: lib.rs
test-contracts/no-events-at-all-safe/: Cargo.toml
test-contracts/no-events-at-all-safe/src/: lib.rs
(+220 files in other folders)
