[workspace]
resolver = "2"
members = ["crates/cli", "crates/analyzer", "crates/checks"]
exclude = ["test-contracts"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-core"

[workspace.dependencies]
syn = { version = "3.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
thiserror = "2.0"
