[package]
name = "init-no-event-vulnerable"
version = "0.1.0"
description = "Contract with initialization that doesn't emit events — should trigger `init-no-event` (Low)"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug = 1